--- a/ClientApp/src/app/login/login.component.html
+++ b/ClientApp/src/app/login/login.component.html
@@ -44,4 +44,10 @@
       </form>
     </div>
   </div>
-</div>
+  <div *ngIf="isLoggedIn">
+    Logout from User:  {{ firstname }}
+    <button class="btn btn-primary" (click)="onLogOut()">
+      Log out
+    </button>
+  </div>
+  </div>
